# obs-stream-manager

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  electron-builder.yml  eslint.config.js  index.html  installer.nsh  package-lock.json  package.json  provider-oauth.example.json  tsconfig.desktop.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
desktop/: integration.test.ts  integration.ts  main.ts  preload.cts  startup.test.ts  startup.ts  updater.test.ts  updater.ts
docs/: AUDIO_AUTO_ADJUST.md  CLAUDE_DESIGN_HANDOFF.md  DESIGN_HANDOFF.md  DEVELOPMENT.md  DISTRIBUTION.md  OBS_SETUP.md  TESTER_QUICK_START_JA.md
native/obs-stream-manager-output/: CMakeLists.txt  README.md  buildspec.json
native/obs-stream-manager-output/data/locale/: en-US.ini
native/obs-stream-manager-output/src/: plugin-main.c
scripts/: build-obs-plugin.ps1  check-secrets.mjs  generate-app-icon.mjs  measure-obs-filter-response.ts  prepare-provider-bundle.mjs  verify-live-obs-output.ts  verify-windows-package.ps1  write-release-checksums.d.mts  write-release-checksums.mjs  write-release-checksums.test.ts
server/: audio-calibration.test.ts  audio-calibration.ts  bgm-library.test.ts  bgm-library.ts  capture.test.ts  capture.ts  common-template.test.ts  common-template.ts  configure-oauth.ts  defaults.ts  folder-picker.ts  index.ts  local-obs-provisioning.test.ts  local-obs-provisioning.ts  logger.test.ts  logger.ts  oauth-callback.test.ts  oauth-callback.ts  oauth.test.ts  oauth.ts  obs-common-template.test.ts  obs.ts  (+18 more)
(+42 files in other folders)
